syntax = "proto3";

option java_multiple_files = true;
option java_package = "kz.app.grpc";
option java_outer_classname = "HelloProto";

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
